; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_jump.c_delete_jump.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_jump.c_delete_jump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @delete_jump(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i64 @single_set(i64 %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @SET_DEST(i64 %9)
  %11 = call i64 @GET_CODE(i32 %10)
  %12 = load i64, i64* @PC, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %8
  %15 = load i64, i64* %2, align 8
  %16 = call i32 @delete_computation(i64 %15)
  br label %17

17:                                               ; preds = %14, %8, %1
  ret void
}

declare dso_local i64 @single_set(i64) #1

declare dso_local i64 @GET_CODE(i32) #1

declare dso_local i32 @SET_DEST(i64) #1

declare dso_local i32 @delete_computation(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
